Source/IntegrationTests/TestFiles/LitTests/LitTest/dafny0/snapshots/Inputs/Snapshots0.v1.dfy
method foo()
{
  bar();
  assert false;  // error
}

method bar()
  ensures true;
